--- a/exercise2.html
+++ b/exercise2.html
@@ -1,19 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exercise2</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Exercise 2</title>
 </head>
-<h1>MY FIRST HEADING</h1>
-<h2>SECOND HEADING</h2>
-<p>my first paragrapgh</p>
-<h3>THIRD HEADING</h3>
-<p>my second paragrapgh</p>
+<body>
+  <h1>Personal details</h1>
+  <form>
+    <div>
+      <label for="firstName">First name:</label>
+      <input type="text" id="firstName" name="firstName" />
+    </div>
 
+    <div>
+      <label for="lastName">Last name:</label>
+      <input type="text" id="lastName" name="lastName" />
+    </div>
 
+    <div>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" />
+    </div>
 
+    <div>
+      <label>Gender:</label>
+      <input type="radio" id="male" name="gender" value="male" />
+      <label for="male">Male</label>
 
+      <input type="radio" id="female" name="gender" value="female" />
+      <label for="female">Female</label>
+    </div>
 
+    <h1>Magazines</h1>
+    <div>
+      <input type="checkbox" id="stavanger" name="magazines" value="Stavanger Aftenblad" />
+      <label for="stavanger">Stavanger Aftenblad</label>
+    </div>
+
+    <div>
+      <input type="checkbox" id="teknisk" name="magazines" value="Teknisk Ukeblad" />
+      <label for="teknisk">Teknisk Ukeblad</label>
+    </div>
+
+    <div>
+      <input type="checkbox" id="seoghor" name="magazines" value="SE og Hor" />
+      <label for="seoghor">SE og Hor</label>
+    </div>
+
+    <div>
+      <input type="checkbox" id="familien" name="magazines" value="Familien" />
+      <label for="familien">Familien</label>
+    </div>
+
+    <h1>Subscription</h1>
+    <div>
+      <label for="period">Period (months):</label>
+      <input type="number" id="period" name="period" min="1" max="12" value="6" />
+    </div>
+
+    <div>
+      <button type="submit">Subscribe</button>
+    </div>
+  </form>
 </body>
 </html>
