--- a/exercise2b.html
+++ b/exercise2b.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exercise2</title>
+    <title>exercise2b</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-   <h1><b>My first heading</b></h1>
+   <h1 id="title13">MY first heading</h1>
    <h1 id="title12">MY second heading </h1>
    <p id="title1">My first paraghraph</p>
    <br>
